--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:name="Application"
         android:allowBackup="false"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/makewithmotologo"
+        android:icon="@drawable/logo_gray"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library
@@ -49,13 +49,12 @@
             android:name="com.makewithmoto.bt.DeviceListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="select device"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@style/BTTheme" />
         <activity
             android:name="android.bluetooth.RequestEnableActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="Bluetooth Permission Request"
-            android:noHistory="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="net.bluetoothviewer.action.REQUEST_ENABLE" />
 
